# Alitheia-Core

./: .gitattributes  .gitconfig  .gitignore  @  IDE.md  LICENSE  Makefile  Makefile-sub.common  Makefile.bundle  Makefile.common  Makefile.config  Makefile.metrics  Makefile.run  README-BUILD.txt  README-CONFIGURE.txt  README-DEVELOP.txt  README-RUN.txt  README-data.txt  README.deploy  README.eclipse  README.ide  README.md  README.txt  Template.java.in  build-test.xml  build.xml  checkstyle.md  copy-dependencies  debug.sh  eclipse-projectSet.psf  findbugs.md  ignores.txt  pom.xml
.recommenders/caches/: identified-project-coordinates.json
4143760-4167562/: .gitignore  Assignment1.md  assignment1.html  assignment1.md  assignment2.html  assignment2.md  h2.md
4143760-4167562/coverage/: .sessions.html
4143760-4167562/presentation/: beamercolorthemetud.sty  beamerfontthemetud.sty  beamerinnerthemetud.sty  beamerouterthemetud.sty  beamerthemetud.sty  presentation.aux  presentation.nav  presentation.tex
alitheia/: Makefile  Makefile-sub.inc  assembly.xml  pom.xml
alitheia/admin/: pom.xml
alitheia/cache/: pom.xml
alitheia/core/: Makefile  default.ecore  default.ecore_diagram  osgi.bnd  pom.xml
alitheia/db/: Makefile  pom.xml
alitheia/fds/: Makefile  pom.xml
alitheia/logger/: .project  Makefile  pom.xml  startlevel.cfg
alitheia/messaging/: .classpath  .project  Makefile  pom.xml
alitheia/restservice/: pom.xml
alitheia/runner/: deploy-pom.xml
alitheia/scheduler/: Makefile  pom.xml
alitheia/security/: Makefile  pom.xml
alitheia/specs/: Makefile  pom.xml
alitheia/tds/: Makefile  pom.xml
alitheia/tester/: Makefile  pom.xml
alitheia/updater/: .classpath  .project  Makefile  pom.xml
alitheia/util/: Makefile  pom.xml
alitheia/web-services/: Makefile  assembly.xml  pom.xml
alitheia/webadmin/: .classpath  Makefile  pom.xml
alitheia/webservices/: osgi.bnd  pom.xml
alitheia/webui/: .project  Makefile  pom.xml
assignment1 report/: software reengineering assignment 1 adam kucera maarten duijn.aux  software reengineering assignment 1 adam kucera maarten duijn.tex
corba/: Makefile  Makefile-sub.inc  README-BUILD.txt  README-DEVELOP.txt  README-RUN.txt  README.txt  pom.xml
corba/corbaservice/: Makefile  pom.xml
corba/cpp/: CMakeLists.txt  Makefile
corba/cpp/cmake/modules/: FindMICO.cmake
corba/cpp/examples/: CMakeLists.txt  Makefile
corba/cpp/examples/job/: CMakeLists.txt  Makefile  main.cpp
corba/cpp/examples/logger/: CMakeLists.txt  Makefile  main.cpp
corba/cpp/examples/metric/: CMakeLists.txt  Makefile  main.cpp
corba/cpp/include/: Core  DBObject  Database  FDS  Job  Logger  Metric  Scheduler
corba/cpp/metrics/: CMakeLists.txt
corba/cpp/metrics/process_wrapper/: CMakeLists.txt  Makefile  main.cpp  temporaryfile.cpp  temporaryfile.h  wrappermetric.cpp  wrappermetric.h  wrappermetricjob.cpp  wrappermetricjob.h
corba/cpp/metrics/process_wrapper/boost/: process.hpp
corba/cpp/metrics/process_wrapper/boost/process/: basic_pipeline.hpp  child.hpp  children.hpp  command_line.hpp  config.hpp  exceptions.hpp  forward_decls.hpp  launcher.hpp  pipeline.hpp  pistream.hpp  posix_child.hpp  posix_launcher.hpp  posix_status.hpp  postream.hpp  status.hpp  stream_behavior.hpp  win32_child.hpp  win32_launcher.hpp
corba/cpp/metrics/process_wrapper/boost/process/detail/: command_line_ops.hpp  environment.hpp  factories.hpp  file_handle.hpp  launcher_base.hpp  pipe.hpp  posix_ops.hpp  stream_info.hpp  systembuf.hpp  win32_ops.hpp
corba/cpp/metrics/process_wrapper/examples/: sloccount_cost  wc
corba/cpp/metrics/wc/: CMakeLists.txt  Makefile  main.cpp  wcmetric.cpp  wcmetric.h  wcmetricjob.cpp  wcmetricjob.h
corba/cpp/src/: CMakeLists.txt  Makefile  corbahandler.cpp  corbahandler.h  core.cpp  core.h  database.cpp  database.h  dbobject.cpp  dbobject.h  fds.cpp  fds.h  job.cpp  job.h  logger.cpp  logger.h  metric.cpp  metric.h  scheduler.cpp  scheduler.h
corba/cpp/src/boost/encoding/: base64.hpp  encoding.hpp
corba/idl/: Alitheia.idl  Makefile  pom.xml
corba/python/: Makefile  alitheia.py  corbahandler.py  logger.py  test.py
corbaclientcpp/: Alitheia.idl  Makefile  corbahandler.cpp  corbahandler.h  core.cpp  core.h  logger.cpp  main.cpp  metric.cpp  metric.h
corbaservice/manifest/: corba.mf
corbaservice/src/: Alitheia.idl  Makefile
db/: README  create.sql
doc/: Makefile  db-schema.sh
doc/src/: admin.xml  devel.xml  docinfo.xml  documentation.xml  preface.xml  user.xml
equinox/configuration/: config.ini  config.ini.in  log4j.properties  (+3 more)
equinox/configuration-specs/: config.ini
examples/: Makefile  README  clear-db-derby.sql  clear-db-psql.sql  db-derby.sql  db-postgres.sql  db-psql.sql  db.sql  drop-db-postgres.sql  munge.pl  sample-db-postgres.tar
extlibs/: Makefile  pom.xml
metrics/: Makefile  Makefile-sub.inc  README.txt  assembly.xml  pom.xml
misc/: maven.crt
parsers/: pom.xml
plug-ins/: README.txt  pom.xml
poms/: pom.xml
provision/: pom.xml
sharedlibs/: Makefile  Makefile-sub.inc  assembly.xml  pom.xml
sparc-config/: .project  CHANGELOG  CONFIGURATION  SERVICES  TODO
specs/: Makefile  assembly.xml  pom.xml
sqoossrepo/: Makefile  com.mysql.mf  javax.mail.mf  javax.servlet.mf  javax.stax.api.mf  org.apache.axiom.api.mf  org.apache.axiom.dom.mf  org.apache.axiom.impl.mf  org.apache.axis2.databinding.mf  org.apache.axis2.kernel.mf  org.apache.commons.codec.mf  org.apache.commons.collections.mf  org.apache.commons.httpclient.mf  org.apache.commons.logging.mf  org.apache.derby.mf  org.apache.log4j.mf  org.apache.neethi.mf  org.apache.velocity.mf  org.apache.ws.commons.schema.mf  org.apache.wsdl4j.mf  org.clmt.mf  org.codehaus.stax2.mf  org.concordion.mf  org.dom4j.mf  org.hibernate.mf  org.jfree.chart.mf  org.junit.mf  org.postgresql.jdbc.mf  org.tmatesoft.svnkit.mf
tools/: BundleSelecter.java  GetHTML.java  Makefile  buildcompare.sh  check-pom-validity.sh  db.sh  makerelease.sh  setbp.sh  setcp.sh
ui/: Makefile  pom.xml
web/: pom.xml
(+3487 files in other folders)
